Update RICK ON TOP.theme.css

--- a/RICK ON TOP.theme.css
+++ b/RICK ON TOP.theme.css
@@ -1,8 +1,8 @@
 /**
  * @name RICK ON TOP
- * @author ClearVision Team
+ * @author rick astley#0001
  * @version 6
- * @description Highly customizable and beautiful theme for BetterDiscord
+ * @description sub to rick astley on youtube
  * @source https://github.com/ClearVision/ClearVision-v6
  * @website https://clearvision.gitlab.io
  * @invite 2fKpjAR
