--- a/Rick Theme.theme.css
+++ b/Rick Theme.theme.css
@@ -1,8 +1,8 @@
 /**
  * @name Rick Theme
- * @author ClearVision Team
+ * @author rickastley#0001
  * @version 6
- * @description Highly customizable and beautiful theme for BetterDiscord
+ * @description SUB TO RICK ASTLEY ON YOUTUBE
  * @source https://github.com/ClearVision/ClearVision-v6
  * @website https://clearvision.gitlab.io
  * @invite 2fKpjAR
